// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Image
    alt=" "
    fit="fill"
    isFluid={false}
    src=""
    variant="default"
  >
    <img
      alt=" "
      className="image fill default orion-fusion-theme"
      onError={[Function]}
      onLoad={[Function]}
      role="presentation"
      src=""
    />
  </Image>
</ThemeContextProvider>
`;

exports[`should ignore Aria and title attribute for decorative image 1`] = `
<img
  alt=" "
  className="image fill default"
  height="75"
  onError={[Function]}
  onLoad={[Function]}
  role="presentation"
  src="profile.jpg"
  width="75"
/>
`;

exports[`should ignore provided role and render image with default decorative image role 1`] = `
<img
  alt=" "
  className="image fill default"
  height="75"
  onError={[Function]}
  onLoad={[Function]}
  role="presentation"
  src="profile.jpg"
  width="75"
/>
`;

exports[`should render a circle image component with fluid behavior 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#ffe4c4",
      "height": 200,
      "width": 200,
    }
  }
>
  <Image
    alt="circle"
    fit="fill"
    isFluid={true}
    src=""
    variant="circle"
  />
</div>
`;

exports[`should render a default component with decorative image attributes 1`] = `
<img
  alt=" "
  className="image fill default"
  onError={[Function]}
  onLoad={[Function]}
  role="presentation"
  src=""
/>
`;

exports[`should render a hidden src image and a visible placeholder image 1`] = `
<Fragment>
  <img
    alt=" "
    className="image fill default hidden"
    height="75"
    onError={[Function]}
    onLoad={[Function]}
    role="presentation"
    src="profile.jpg"
    width="75"
  />
  <div>
    placeholder text
  </div>
</Fragment>
`;

exports[`should render a thumbail image component with fluid behavior 1`] = `
<img
  alt="thumbnail image"
  class="image fill thumbnail fluid"
  src=""
/>
`;

exports[`should render a thumbail image component with non-fluid behavior 1`] = `
<img
  alt="thumbnail image"
  class="image fill thumbnail"
  src=""
/>
`;

exports[`should render image without decorative image role 1`] = `
<img
  alt="profile image"
  className="image fill default"
  height="75"
  onError={[Function]}
  onLoad={[Function]}
  src="profile.jpg"
  width="75"
/>
`;

exports[`should render the placeholder image 1`] = `
<div>
  placeholder text
</div>
`;

exports[`should render the src image 1`] = `
<img
  alt="profile"
  className="image fill default"
  height="75"
  onError={[Function]}
  onLoad={[Function]}
  src="profile.jpg"
  width="75"
/>
`;
